// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate tCore resources Test grc resource migration test with older version of ugnt in grc/bible - should be removed 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.1",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test grc resource migration test with older version of xx in grc/bible - should not move 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/xx/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test grc resource migration test with xx in grc/bible - should migrate to el-x-koine 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/xx/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with current el-x-koine tHelps resources - should not delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with no user resources 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with old el-x-koine tHelps resources (no manifest.json) - should update 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with old en_ult - should delete old version 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with old tHelps resources - should delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t - should not delete 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources and not up to date resources - should remove old helps and keep old bibles 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources and up to date resources - should not delete anything 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
  "<HOME_DIR>/translationCore/resources/x-test/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources and up to date resources - should not delete anything 2`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
  "<HOME_DIR>/translationCore/resources/x-test/translationHelps/translationWords/v8.1",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources, up to date resources and different app version - should remove old helps and keep old bibles 1`] = `
Array [
  "<HOME_DIR>/translationCore/resources/el-x-koine/bibles/ugnt/v0.2",
  "<HOME_DIR>/translationCore/resources/el-x-koine/translationHelps/translationWords/v8",
  "<HOME_DIR>/translationCore/resources/en/bibles/ult/v12.1",
  "<HOME_DIR>/translationCore/resources/en/bibles/ust/v10",
  "<HOME_DIR>/translationCore/resources/en/bibles/t4t/v12.1",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationAcademy/v9",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationNotes/v15",
  "<HOME_DIR>/translationCore/resources/en/translationHelps/translationWords/v10",
  "<HOME_DIR>/translationCore/resources/hbo/bibles/uhb/v0",
  "<HOME_DIR>/translationCore/resources/hi/translationHelps/translationWords/v8.1",
]
`;
